# Occam

./: .gitignore  LICENSE  README.md  check_notion_schema.py  feishu_bot.py  main.py  pyproject.toml
occam/: __init__.py
occam/bot/: __init__.py  client.py  handlers.py
occam/config/: __init__.py  settings.py
occam/models/: __init__.py  knowledge.py
occam/services/: __init__.py  ai_processor.py  message_processor.py  notion_storage.py  scraper.py
occam/utils/: __init__.py  logger.py
